--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html> 
     <head>     
         <title>My Farcaster Poll Frame</title>     
-        <meta property="fc-frame" content="v.next">  
+        <meta property="fc:frame" content="vNext" />
+        <meta property="fc:frame:image" content="https://example.com/image.jpg" />
+        <meta property="og:image" content="https://example.com/image.jpg" />
     </head> 
     <body>     
         <h2>Favorite Ice Cream Flavor?</h2>       
