--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta property="fc:frame" content="vNext" />
         <meta property="fc:frame:image" content="https://example.com/image.jpg" />
         <meta property="og:image" content="https://example.com/image.jpg" />
+
+        <meta property="fc:frame:button:1" content="Button 1" />
+        <meta property="fc:frame:button:2" content="Button 2" />
+        <meta property="fc:frame:input:text" content="Input" />
     </head> 
     <body>     
         <h2>Favorite Ice Cream Flavor?</h2>       
