--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <meta property="fc:frame:image" content="https://example.com/image.jpg" />
         <meta property="og:image" content="https://example.com/image.jpg" />
 
-        <meta property="fc:frame:button:1" content="Button 1" />
-        <meta property="fc:frame:button:2" content="Button 2" />
-        <meta property="fc:frame:input:text" content="Input" />
+        <meta property="fc:frame:button:1" content="Gnosis" />
+        <meta property="fc:frame:button:2" content="MakerDAO" />
+        <meta property="fc:frame:button:3" content="Arb" />
+        <meta property="fc:frame:button:4" content="Lido" />
+        <meta property="fc:frame:button:5" content="Mantle(BitDAO)" />
     </head> 
     <body>     
         <h2>Favorite Ice Cream Flavor?</h2>       
