--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <meta property="og:title" content="Pinat-Get treasuries of some of the best DAO's in web3" />
-    <meta property='og:image' content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.alchemy.com%2Fblog%2Ftypes-of-daos&psig=AOvVaw3nJhnLSTzZ39LNvdrGySCX&ust=1711380844080000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPivhsycjYUDFQAAAAAdAAAAABAE" />
+    <meta property="of:accepts:xmtp" content="2024-02-01" />
+    <meta property="og:title" content="Pinat- Analyse some of the best bridges that support Optimism" />
+    <meta property='og:image' content="https://academy-public.coinmarketcap.com/optimized-uploads/e126c6f4d3cb4f94874038ce4e2ec425.png" />
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.alchemy.com%2Fblog%2Ftypes-of-daos&psig=AOvVaw3nJhnLSTzZ39LNvdrGySCX&ust=1711380844080000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPivhsycjYUDFQAAAAAdAAAAABAE" />
+    <meta property="fc:frame:image" content="https://academy-public.coinmarketcap.com/optimized-uploads/e126c6f4d3cb4f94874038ce4e2ec425.png" />
 
-    <meta property="fc:frame:button:1" content="Gnosis" />
+    <meta property="fc:frame:button:1" content="Across" />
     <meta property="fc:frame:button:1:action" content="link" />
-    <meta property="fc:frame:button:1:target" content="https://defillama.com/protocol/gnosis-dao#treasury" />
+    <meta property="fc:frame:button:1:target" content="https://defillama.com/bridge/across" />
 
-    <meta property="fc:frame:button:2" content="OP" />
+    <meta property="fc:frame:button:2" content="Stargate" />
     <meta property="fc:frame:button:2:action" content="link" />
-    <meta property="fc:frame:button:2:target" content="https://defillama.com/protocol/optimism-foundation#treasury" />
+    <meta property="fc:frame:button:2:target" content="https://defillama.com/bridge/stargate" />
 
-    <meta property="fc:frame:button:3" content="Compound" />
+    <meta property="fc:frame:button:3" content="CCTP" />
     <meta property="fc:frame:button:3:action" content="link" />
-    <meta property="fc:frame:button:3:target" content="https://defillama.com/protocol/compound-finance#treasury"/>
+    <meta property="fc:frame:button:3:target" content=""/>
 
-    <meta property="fc:frame:button:4" content="Lido" />
+    <meta property="fc:frame:button:4" content="Hop" />
     <meta property="fc:frame:button:4:action" content="link" />
-    <meta property="fc:frame:button:4:target" content="https://defillama.com/protocol/lido#treasury" />
+    <meta property="fc:frame:button:4:target" content="https://defillama.com/bridge/hop" />
 
-    <meta property="fc:frame:button:4" content="Mantle(BitDAO)" />
-    <meta property="fc:frame:button:4:action" content="link" />
-    <meta property="fc:frame:button:4:target" content="https://defillama.com/protocol/mantle-treasury#treasury" />
 </head>
