--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta property="fc:frame:button:3" content="CCTP" />
     <meta property="fc:frame:button:3:action" content="link" />
-    <meta property="fc:frame:button:3:target" content=""/>
+    <meta property="fc:frame:button:3:target" content="https://defillama.com/bridge/circle-cctp"/>
 
     <meta property="fc:frame:button:4" content="Hop" />
     <meta property="fc:frame:button:4:action" content="link" />
