--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width"/>
     <meta property="of:accepts:xmtp" content="2024-02-01" />
     <meta property="og:title" content="Pinat- Analyse some of the best bridges that support Optimism" />
-    <meta property='og:image' content="https://academy-public.coinmarketcap.com/optimized-uploads/e126c6f4d3cb4f94874038ce4e2ec425.png" />
+    <meta property='og:image' content="https://media.licdn.com/dms/image/D5612AQG7Pl1BK5cT6w/article-cover_image-shrink_600_2000/0/1672937389860?e=2147483647&v=beta&t=EZJusLxVRAcXuAV14K5ph4wz8DP0vQMm7jNRNSIAtec" />
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://academy-public.coinmarketcap.com/optimized-uploads/e126c6f4d3cb4f94874038ce4e2ec425.png" />
+    <meta property="fc:frame:image" content="https://media.licdn.com/dms/image/D5612AQG7Pl1BK5cT6w/article-cover_image-shrink_600_2000/0/1672937389860?e=2147483647&v=beta&t=EZJusLxVRAcXuAV14K5ph4wz8DP0vQMm7jNRNSIAtec" />
 
     <meta property="fc:frame:button:1" content="Across" />
     <meta property="fc:frame:button:1:action" content="link" />
